--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "husky": "^8.0.1",
+    "lint-staged": "^12.4.1",
     "next": "12.1.6",
     "prettier": "^2.6.2",
     "react": "18.1.0",
