chore: install eslint-config-prettier & yarn run format:fix done

--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
-        "eslint --ext .tsx --ext .ts ./src --fix"
-      ],
-      "./src/**": [
-        "prettier --write ."
-      ]
-    },
-    "husky": {
-      "hooks": {
-        "pre-commit": "lint-staged"
-      }
+      "eslint --ext .tsx --ext .ts ./src --fix"
+    ],
+    "./src/**": [
+      "prettier --write ."
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "dependencies": {
     "@commitlint/cli": "^16.2.4",
     "@commitlint/config-conventional": "^16.2.4",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^12.4.1",
     "next": "12.1.6",
