--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
@@ -45,6 +47,7 @@
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
     "jest": "^28.1.0",
+    "jest-environment-jsdom": "^28.1.0",
     "typescript": "4.6.4"
   }
 }
