chore: edit pre-commit

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "lint-staged": {
     "*.@(ts|tsx)": [
-      "yarn format:fix"
+      "yarn format:fix",
+      "yarn lint"
     ]
   },
   "husky": {
