--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "next": "12.1.6",
     "prettier": "^2.6.2",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-redux": "^8.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
