--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --dir src",
-    "lint:fix": "eslint src --ext .js,jsx,.ts,.tsx --fix",
+    "lint": "next lint --dir",
+    "lint:fix": "eslint --ext .js,jsx,.ts,.tsx --fix",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
     "prepare": "husky install",
